# HeiBan

./: README.md  README_EN.md  build.bat  output.html  pyproject.toml  requirements.txt  slide_converter.py  test.html  test_demo.md  test_demo_dark.html  test_demo_light.html  upload_pypi.bat  upload_pypi.sh
heiban/: __init__.py  __main__.py  cli.py  converter.py  gui.py
tests/: __init__.py  test_converter.py  test_v2_converter.py
v2/: __init__.py  converter.py  md_parser.py  pdf_exporter.py
