[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heiban"
dynamic = ["version"]
description = "Mermaid to HTML Slides Generator with PySide6 GUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "HeiBan Contributors" },
]
keywords = ["markdown", "slides", "reveal.js", "mermaid", "pyside6", "gui", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "PySide6>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
heiban = "heiban.cli:main"

[project.urls]
Homepage = "https://github.com/cycleuser/HeiBan"
Repository = "https://github.com/cycleuser/HeiBan"
Issues = "https://github.com/cycleuser/HeiBan/issues"

[tool.setuptools.dynamic]
version = { attr = "heiban.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["heiban*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]